# game

./: README.md  run_game.py
.trae/rules/: git-commit-message.md
abcd/: Cargo.toml
ck_engine/: __init__.py
ck_engine/ai/: __init__.py  decision.py  personality.py
ck_engine/core/: __init__.py  balance.py  calendar.py  stats.py  traits.py
ck_engine/data/: __init__.py
ck_engine/data/map_layouts/: 1066.json
ck_engine/data/scenarios/: 1066.json
ck_engine/events/: __init__.py  engine.py
ck_engine/game/: __init__.py  main.py  scenario.py  scenario_loader.py  simulation.py
ck_engine/military/: __init__.py  army.py  battle.py  siege.py  war.py
ck_engine/politics/: __init__.py  council.py  diplomacy.py  factions.py  laws.py  schemes.py
ck_engine/ui/: __init__.py  api.py  map_layout.py  server.py
ck_engine/ui/static/: app.js  index.html  style.css
ck_engine/world/: __init__.py  character.py  dynasty.py  map.py  title.py  world_state.py
saves/: 12121.json  autosave.json  manager_smoke.json  unit_test_save.json
tests/: test_core_systems.py
